# patterns

./: CMakeLists.txt
decorator/: CMakeLists.txt  classic_decorator.cpp  logger_decorator.cpp  raii_decorator.cpp
singletone/: CMakeLists.txt  classic_singleton.cpp  meyers_singleton.cpp  raii_singleton.cpp  ref_singleton.cpp
strategy/: CMakeLists.txt  classic_strategy.cpp
template_method/: CMakeLists.txt  classic_template_method.cpp  static_template_method.cpp
